--- a/package.json
+++ b/package.json
@@ -3,19 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.13",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apollo-boost": "0.1.16",
+    "bootstrap": "4.1.3",
+    "cors": "2.8.4",
+    "express": "4.16.3",
+    "express-graphql": "0.6.12",
+    "graphql": "14.0.2",
+    "graphql-tag": "2.9.2",
     "react": "^17.0.2",
+    "react-apollo": "2.1.11",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "reactstrap": "6.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-graph": "npm-run-all --parallel watch:server start:web",
+    "start:web": "react-scripts start",
+    "start:server": "node src/server",
+    "watch:server": "nodemon --watch src/server src/server",
+    "build-graph": "react-scripts build",
+    "test-graph": "react-scripts test --env=jsdom",
+    "eject-graph": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +51,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "1.18.4",
+    "npm-run-all": "4.1.3"
   }
 }
